# safespeednet-speed-safety-score

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: scoring_default.yaml
docs/: CLASSIFICATION_SCHEMA.md  SPEED_SAFETY_SCORE.md
examples/: example_input_segments.csv  example_scored_segments.csv  score_segments_example.py
safespeednet_ai/: __init__.py  scoring.py  utils.py
tests/: test_scoring.py
